--- a/app-tracker-teacher/app/src/main/res/layout/activity_create_meeting_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_create_meeting_view.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/roboto"
         android:text="CREATE MEETING"
         android:textColor="#004D40"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
@@ -38,27 +38,24 @@
 
     <Button
         android:id="@+id/btnCancelCreateMeeting"
-        android:layout_width="98dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
         android:backgroundTint="@color/gray"
         android:fontFamily="@font/roboto"
         android:text="@string/btnCancelCreate"
+        app:layout_constraintEnd_toStartOf="@+id/btnConfirmCreateMeeting"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSelectDate" />
 
     <Button
         android:id="@+id/btnConfirmCreateMeeting"
-        android:layout_width="98dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
-        android:layout_marginEnd="103dp"
         android:fontFamily="@font/roboto"
         android:text="@string/btnCreateCourse"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/btnCancelCreateMeeting"
         app:layout_constraintTop_toBottomOf="@+id/tvSelectDate" />
 
