Create Meeting and Registration Validation, and Create Course duplication prevention

--- a/app-tracker-teacher/app/src/main/res/layout/activity_registration_view.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_registration_view.xml
@@ -67,7 +67,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_person"
-        android:hint="DLSU ID number"
+        android:hint="DLSU ID number (e.g. 11812345)"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
