--- a/app-tracker-student/app/src/main/res/menu/profile_menu.xml
+++ b/app-tracker-student/app/src/main/res/menu/profile_menu.xml
@@ -4,6 +4,9 @@
         android:id="@+id/editProfile"
         android:title="@string/itemEditProfile"/>
     <item
+        android:id="@+id/editAccountSecurity"
+        android:title="@string/accountSecurity"/>
+    <item
         android:id="@+id/logout"
         android:title="@string/itemLogout" />
 </menu>
