--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_class.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_class.xml
@@ -18,16 +18,37 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/txtClassTitle"
-            android:layout_width="wrap_content"
+            android:id="@+id/txtClassCodeTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:text="CLASSNAME - SECTION"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/roboto_bold"
+            android:text="COURSECODE - SECTION"
             android:textColor="#004D40"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="12dp" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtClassNameSubtitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/roboto"
+            android:text="COURSENAME"
+            android:textColor="#00897B"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/dividerLine"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtClassCodeTitle" />
 
         <View
             android:id="@+id/dividerLine"
@@ -37,9 +58,9 @@
             android:background="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtClassTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/txtClassNameSubtitle" />
 
-<!--        <ImageButton-->
+        <!--        <ImageButton-->
 <!--            android:id="@+id/settingsCourse"-->
 <!--            android:layout_width="45dp"-->
 <!--            android:layout_height="45dp"-->
@@ -89,7 +110,7 @@
             android:background="@drawable/template_rounded_corner"
             android:backgroundTint="#EEEEEE"
             android:padding="10dp"
-            android:text="69 students"
+            android:text="0 students"
             android:textColor="#004D40"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
