--- a/app-tracker-teacher/app/src/main/res/layout/layout_singlemeeting_studentlist.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_singlemeeting_studentlist.xml
@@ -10,18 +10,20 @@
     android:backgroundTint="#EEEEEE"
     android:padding="20dp">
 
-    <Switch
-        android:id="@+id/switchIsPresent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#004D40"
+    <ImageButton
+        android:id="@+id/isPresent"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
+        android:adjustViewBounds="true"
+        android:background="@null"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_present_foreground" />
 
     <TextView
-        android:id="@+id/txtAcceptStudentName"
+        android:id="@+id/txtMeetingStudentName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
