--- a/app-tracker-student/app/src/main/res/layout/activity_search_course.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_search_course.xml
@@ -6,74 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".SearchCourseActivity">
 
-    <EditText
-        android:id="@+id/etSearchCourseCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginEnd="101dp"
-        android:ems="10"
-        android:fontFamily="@font/roboto"
-        android:inputType="textPersonName"
-        android:text="Course code"
-        android:textColor="@color/gray"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSearchCourseHeader" />
-
     <TextView
-        android:id="@+id/tvSearchCourseHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="190dp"
-        android:layout_marginEnd="128dp"
-        android:fontFamily="@font/roboto"
-        android:text="Search Course"
-        android:textColor="#004D40"
-        android:textSize="24sp"
+        android:text="COURSE SEARCHER"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="30sp"
+        android:layout_marginTop="40dp"
+        android:id="@+id/txtCourseSearcher"
+        />
 
     <EditText
-        android:id="@+id/etSearchCourseSec"
-        android:layout_width="112dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="199dp"
-        android:ems="10"
-        android:fontFamily="@font/roboto"
-        android:inputType="textPersonName"
-        android:text="Section"
-        android:textColor="@color/gray"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSearchCourseCode" />
+        android:id="@+id/inputCourseCode"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="course code"
+        app:layout_constraintTop_toBottomOf="@id/txtCourseSearcher"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        />
+
+    <EditText
+        android:id="@+id/inputSectionCode"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="section code"
+        app:layout_constraintTop_toBottomOf="@id/inputCourseCode"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        />
 
     <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="search"
         android:id="@+id/btnSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
-        android:layout_marginEnd="101dp"
-        android:fontFamily="@font/roboto"
-        android:text="Search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSearchCourseSec" />
-
-    <Button
-        android:id="@+id/btnCancelSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="63dp"
-        android:backgroundTint="@color/gray"
-        android:fontFamily="@font/roboto"
-        android:text="Cancel"
+        app:layout_constraintTop_toBottomOf="@id/inputSectionCode"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSearchCourseSec" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
