--- a/app-tracker-student/app/src/main/res/layout/activity_single_class_view.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_single_class_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SingleClassView">
+    tools:context=".SingleClassActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/topBar"
