--- a/app-tracker-student/app/src/main/res/layout/activity_search_course.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_search_course.xml
@@ -56,7 +56,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/resultBox"
         android:layout_marginTop="20dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/template_rounded_corner"
