--- a/app-tracker-teacher/app/src/main/res/layout/activity_create_course.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_create_course.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto"
         android:hint="Course code"
-        android:inputType="textPersonName"
+        android:inputType="textPersonName|textCapCharacters"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
