finished single course activity functionalities

--- a/app-tracker-student/app/src/main/res/layout/layout_meeting.xml
+++ b/app-tracker-student/app/src/main/res/layout/layout_meeting.xml
@@ -10,11 +10,15 @@
     android:padding="20dp">
 
     <TextView
-        android:id="@+id/txtStudentsPresent"
+        android:id="@+id/txtIsPresent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="69"
-        android:textColor="#004D40"
+        android:text="X"
+        android:background="@drawable/template_rounded_corner"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:backgroundTint="@color/red_light"
+        android:textColor="@color/white"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +35,7 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/txtStudentsPresent"
+        app:layout_constraintStart_toEndOf="@id/txtIsPresent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
