--- a/app-tracker-student/app/src/main/res/layout/activity_single_class.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_single_class.xml
@@ -18,16 +18,37 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/txtClassTitle"
-            android:layout_width="wrap_content"
+            android:id="@+id/txtClassCodeTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:text="CLASSNAME - SECTION"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/roboto_bold"
+            android:text="COURSECODE - SECTION"
             android:textColor="#004D40"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="12dp" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtClassNameSubtitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/roboto"
+            android:text="COURSENAME"
+            android:textColor="#00897B"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/dividerLine"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtClassCodeTitle" />
 
         <View
             android:id="@+id/dividerLine"
@@ -37,7 +58,7 @@
             android:background="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtClassTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/txtClassNameSubtitle" />
 
         <!--        <ImageButton-->
         <!--            android:id="@+id/settingsCourse"-->
@@ -58,6 +79,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="gone"
         android:id="@+id/infoBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,6 +89,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topBar">
 
+        <ImageButton
+            android:id="@+id/btnAcceptStudents"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.55"
+            app:srcCompat="@drawable/ic_add_students_foreground" />
+
         <TextView
             android:id="@+id/txtStudentCount"
             android:layout_width="wrap_content"
@@ -74,7 +111,7 @@
             android:background="@drawable/template_rounded_corner"
             android:backgroundTint="#EEEEEE"
             android:padding="10dp"
-            android:text="69 students"
+            android:text="0 students"
             android:textColor="#004D40"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -82,6 +119,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.509" />
+
+        <TextView
+            android:id="@+id/txtCreateMeeting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/template_rounded_corner"
+            android:backgroundTint="#EEEEEE"
+            android:padding="10dp"
+            android:text="+"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
