new functionality and general improvements

--- a/app-tracker-student/app/src/main/res/layout/layout_class.xml
+++ b/app-tracker-student/app/src/main/res/layout/layout_class.xml
@@ -29,7 +29,8 @@
             android:id="@+id/courseConstraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#004D40">
+            android:background="#004D40"
+            android:backgroundTint="@color/gray">
 
             <TextView
                 android:id="@+id/txtClassCode"
