--- a/app-tracker-student/app/src/main/res/layout/activity_courselist.xml
+++ b/app-tracker-student/app/src/main/res/layout/activity_courselist.xml
@@ -10,15 +10,17 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnSearchCourse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
-        app:fabSize="mini"
+        android:scaleType="center"
+        app:fabCustomSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_search_course_foreground"/>
+        app:maxImageSize="35sp"
+        app:srcCompat="@drawable/ic_search_course_foreground" />
 
     <TextView
         android:id="@+id/tvHCoursesHeader"
@@ -89,13 +91,14 @@
                 android:id="@+id/img_profilePic"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 android:src="@drawable/img_tempimage" />
 
         </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tvName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="30dp"
@@ -103,6 +106,7 @@
             android:text="JOHN DOE"
             android:textColor="#004D40"
             android:textSize="24sp"
+            app:layout_constraintEnd_toStartOf="@+id/ivProfileSettings"
             app:layout_constraintStart_toEndOf="@+id/circular"
             app:layout_constraintTop_toTopOf="parent" />
 
