--- a/app-tracker-teacher/app/src/main/res/layout/layout_singlemeeting_studentlist.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/layout_singlemeeting_studentlist.xml
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/txtMeetingStudentName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:text="LAST NAME, FIRST NAME"
@@ -32,6 +32,7 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/isPresent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
