--- a/app-tracker-teacher/app/src/main/res/layout/activity_edit_course.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_edit_course.xml
@@ -22,30 +22,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEditACourseHeader" />
 
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Published"
+        android:id="@+id/switchIsPublished"
+        app:layout_constraintTop_toBottomOf="@+id/etEditCourse"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        />
+
     <Button
         android:id="@+id/btnCancelEdit"
         android:layout_width="98dp"
         android:layout_height="48dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/gray"
         android:fontFamily="@font/roboto"
         android:text="@string/btnCancelCreate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEditCourse" />
+        app:layout_constraintTop_toBottomOf="@+id/switchIsPublished" />
 
     <Button
         android:id="@+id/btnSaveEdit"
         android:layout_width="98dp"
         android:layout_height="48dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="100dp"
         android:fontFamily="@font/roboto"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnCancelEdit"
-        app:layout_constraintTop_toBottomOf="@+id/etEditCourse" />
+        app:layout_constraintTop_toBottomOf="@+id/switchIsPublished" />
 
     <TextView
         android:id="@+id/txtEditACourseHeader"
@@ -55,6 +66,7 @@
         android:layout_marginTop="220dp"
         android:layout_marginEnd="122dp"
         android:fontFamily="@font/roboto"
+        android:textStyle="bold"
         android:text="EDIT MOBDEVE - S13"
         android:textColor="#004D40"
         android:textSize="24sp"
