added swipe to refresh functionality to teacher's app

--- a/app-tracker-teacher/app/src/main/res/layout/activity_courselist.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_courselist.xml
@@ -143,6 +143,8 @@
             android:onClick="showPopup"
             />
 
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
@@ -154,8 +156,8 @@
         app:layout_constraintTop_toBottomOf="@id/topBar"
         tools:layout_editor_absoluteX="0dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
@@ -163,10 +165,16 @@
         android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvHCoursesHeader">
+        app:layout_constraintTop_toBottomOf="@+id/tvHCoursesHeader"
+        app:layout_constraintVertical_bias="0.0">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
