--- a/app-tracker-teacher/app/src/main/res/layout/activity_single_class.xml
+++ b/app-tracker-teacher/app/src/main/res/layout/activity_single_class.xml
@@ -142,13 +142,20 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/SingleClassRecyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoBar" />
+        app:layout_constraintTop_toBottomOf="@+id/infoBar">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/SingleClassRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
